--- a/package.json
+++ b/package.json
@@ -3,6 +3,16 @@
   "version": "1.0.0",
   "author": "Peter Kazazes",
   "private": true,
-  "devDependencies": {},
-  "workspaces": ["packages/*"]
+  "devDependencies": {
+    "lerna": "^3.4.0",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
+    "typescript": "^3.0.3"
+  },
+  "workspaces": [
+    "packages/*"
+  ],
+  "dependencies": {
+    "tslint-config-airbnb": "^5.11.0"
+  }
 }
