--- a/packages/prisma/prisma.yml
+++ b/packages/prisma/prisma.yml
@@ -3,7 +3,7 @@ datamodel: datamodel.prisma
 
 generate:
   - generator: typescript-client
-    output: ./generated/prisma
+    output: ./src/generated/prisma
 
 hooks:
   post-deploy:
