--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,12 @@ before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash -s
   - export PATH="$HOME/.yarn/bin:$PATH"
 node_js:
-  - 8
+  - "8"
 install:
-  - yarn
+  - yarn --pure-lockfile
 script:
   - yarn run build
+  - yarn run test
 cache:
   yarn: true
   directories:
