--- a/package.json
+++ b/package.json
@@ -7,19 +7,18 @@
     "build": "lerna run build",
     "clean": "lerna run clean",
     "lint": "lerna run lint",
-    "test": "lerna run test"
+    "test": "lerna run test",
+    "serve": "yarn workspace @status-scrape/admin run serve"
   },
   "devDependencies": {
     "lerna": "^3.4.0",
     "rimraf": "^2.6.2",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
+    "tslint-config-airbnb": "^5.11.0",
     "typescript": "^3.0.3"
   },
   "workspaces": [
     "packages/*"
-  ],
-  "dependencies": {
-    "tslint-config-airbnb": "^5.11.0"
-  }
+  ]
 }
