--- a/packages/scraper/package.json
+++ b/packages/scraper/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "build": "yarn run clean && tsc",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "lint": "tslint -c ../tslint.json -p tsconfig.json"
   }
 }
