--- a/packages/scraper/tsconfig.json
+++ b/packages/scraper/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
+    "baseUrl": ".",
     "rootDir": "src",
     "outDir": "dist",
     "paths": {
       "*": ["node_modules/*", "types/*"]
-    },
-    "baseUrl": "."
-  }
+    }
+  },
+  "exclude": ["node_modules", "dist"]
 }
