--- a/packages/tsconfig.base.json
+++ b/packages/tsconfig.base.json
@@ -15,6 +15,8 @@
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "sourceMap": true,
-    "lib": ["es2017", "esnext", "dom"]
-  }
+    "lib": ["es2017", "esnext", "dom"],
+    "skipLibCheck": true
+  },
+  "exclude": ["node_modules"]
 }
