--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,7 +15,7 @@
     "watch-test": "npm run test -- --watchAll",
     "build-ts": "tsc -b",
     "watch-ts": "tsc -w",
-    "build-sass": "node-sass src/public/css/main.scss dist/public/css/main.css",
+    "build-sass": "node-sass ./src/public/css/main.scss ./dist/public/css/main.css",
     "watch-sass": "node-sass -w src/public/css/main.scss dist/public/css/main.css",
     "lint": "tslint -c ../tslint.json -p tsconfig.json",
     "copy-static-assets": "node copyStaticAssets.js",
