--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,22 +6,22 @@
   "private": true,
   "scripts": {
     "clean": "rimraf dist",
-    "start": "npm run serve",
-    "build": "npm run build-sass && npm run build-ts && npm run copy-static-assets",
+    "start": "yarn run serve",
+    "build": "yarn run build-sass && yarn run build-ts && yarn run copy-static-assets",
     "serve": "node dist/server.js",
     "watch-node": "nodemon dist/server.js",
-    "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\"",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"yarn run watch-sass\" \"yarn run watch-ts\" \"yarn run watch-node\"",
     "test": "jest --forceExit --coverage --verbose",
-    "watch-test": "npm run test -- --watchAll",
+    "watch-test": "yarn run test -- --watchAll",
     "build-ts": "tsc -b",
     "watch-ts": "tsc -w",
     "build-sass": "node-sass ./src/public/css/main.scss ./dist/public/css/main.css",
     "watch-sass": "node-sass -w src/public/css/main.scss dist/public/css/main.css",
     "lint": "tslint -c ../tslint.json -p tsconfig.json",
     "copy-static-assets": "node copyStaticAssets.js",
-    "debug": "npm run build && npm run watch-debug",
+    "debug": "yarn run build && yarn run watch-debug",
     "serve-debug": "nodemon --inspect dist/server.js",
-    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\""
+    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"yarn run watch-sass\" \"yarn run watch-ts\" \"yarn run serve-debug\""
   },
   "dependencies": {
     "async": "^2.6.0",
