--- a/packages/scraper/package.json
+++ b/packages/scraper/package.json
@@ -5,7 +5,7 @@
   "author": "Peter Kazazes",
   "private": true,
   "scripts": {
-    "build": "yarn run clean && tsc",
+    "build": "tsc",
     "clean": "rimraf dist",
     "lint": "tslint -c ../tslint.json -p tsconfig.json"
   }
