--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "lint": "lerna run --parallel lint",
     "test": "lerna run --parallel test",
     "serve": "yarn workspace @status-scrape/admin run serve",
-    "start": "yarn workspace @status-scrape/prisma-server run start",
-    "watch:ts": "lerna run watch:ts --parallel"
+    "start": "yarn workspace @status-scrape/server run start",
+    "watch:ts": "lerna run watch:ts --parallel",
+    "watch:webpack": "yarn workspace @status-scrape/admin run watch:webpack"
   },
   "devDependencies": {
     "lerna": "^3.4.0",
