--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,6 +12,17 @@
       "type": "npm",
       "script": "build",
       "problemMatcher": ["$tsc"]
+    },
+    {
+      "type": "npm",
+      "script": "watch:ts",
+      "problemMatcher": ["$tslint5"]
+    },
+    {
+      "type": "npm",
+      "script": "watch:ts",
+      "path": "packages/scraper/",
+      "problemMatcher": ["$tsc-watch"]
     }
   ]
 }
