--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@status-scrape/prisma-server",
+  "name": "@status-scrape/server",
   "version": "1.0.0",
   "main": "dist/index.js",
   "author": "Peter Kazazes",
@@ -12,19 +12,22 @@
     "start": "node dist/index.js",
     "prisma": "prisma",
     "watch:ts": "tsc -w",
-    "watch:start": "nodemon dist/index.js"
+    "watch:start": "nodemon dist/index.js",
+    "watch:debug": "nodemon --inspect dist/index.js"
   },
   "dependencies": {
     "@status-scrape/common": "^1.0.0",
     "@types/bcrypt": "^2.0.0",
-    "bcrypt": "3.0.1",
+    "bcrypt": "^3.0.1",
     "dotenv": "^6.0.0",
+    "express-basic-auth": "^1.1.5",
     "graphql": "0.13.2",
     "graphql-yoga": "1.16.2",
     "jsonwebtoken": "8.3.0",
     "prisma-client-lib": "0.2.58"
   },
   "devDependencies": {
+    "@types/dotenv": "^4.0.3",
     "@types/graphql": "^14.0.1",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/prettier": "^1.13.2",
