--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^6.0.0",
     "express-basic-auth": "^1.1.5",
     "graphql": "0.13.2",
+    "graphql-tag": "^2.9.2",
     "graphql-yoga": "1.16.2",
     "jsonwebtoken": "8.3.0",
     "prisma-client-lib": "0.2.58"
