--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,31 +6,31 @@
     {
       "type": "npm",
       "script": "lint",
-      "problemMatcher": [
-        "$tslint5"
-      ]
+      "problemMatcher": ["$tslint5"]
     },
     {
       "type": "npm",
       "script": "build",
-      "problemMatcher": [
-        "$tsc"
-      ]
+      "problemMatcher": ["$tsc"]
     },
     {
       "type": "npm",
       "script": "watch:ts",
-      "problemMatcher": [
-        "$tslint5"
-      ]
+      "problemMatcher": ["$tsc-watch"],
+      "isBackground": true,
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "focus": true,
+        "panel": "dedicated",
+        "showReuseMessage": false
+      }
     },
     {
       "type": "npm",
       "script": "watch:ts",
       "path": "packages/scraper/",
-      "problemMatcher": [
-        "$tsc-watch"
-      ]
+      "problemMatcher": ["$tsc-watch"]
     },
     {
       "type": "npm",
