--- a/packages/prisma/prisma.yml
+++ b/packages/prisma/prisma.yml
@@ -5,7 +5,9 @@ datamodel:
 
 generate:
   - generator: typescript-client
-    output: ./src/generated
+    output: ./src/
+  - generator: graphql-schema
+    output: ./generated
 
 hooks:
   post-deploy:
