--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start": "yarn workspace @status-scrape/server run start",
     "watch:ts": "lerna run watch:ts --parallel",
     "watch:webpack": "yarn workspace @status-scrape/admin run watch:webpack",
-    "debug": "yarn workspace @status-scrape/server watch:debug"
+    "debug": "yarn workspace @status-scrape/server watch:debug",
+    "emulate-functions": "npx @google-cloud/functions-emulator start"
   },
   "devDependencies": {
     "lerna": "^3.4.0",
