--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,11 @@
       "request": "launch",
       "name": "Launch via NPM",
       "runtimeExecutable": "yarn",
-      "runtimeArgs": ["run", "start"]
+      "runtimeArgs": ["run", "debug"],
+      "port": 9229,
+      "outputCapture": "std",
+      "console": "integratedTerminal",
+      "outFiles": ["packages/*/dist/**"]
     }
   ]
 }
