--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,22 +17,31 @@
   },
   "dependencies": {
     "@status-scrape/common": "^1.0.0",
-    "@types/bcrypt": "^2.0.0",
+    "@status-scrape/prisma": "^1.0.0",
+    "apollo-server-core": "^2.1.0",
+    "apollo-server-express": "^2.1.0",
     "bcrypt": "^3.0.1",
+    "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
-    "express-basic-auth": "^1.1.5",
-    "graphql": "0.13.2",
-    "graphql-tag": "^2.9.2",
-    "graphql-yoga": "1.16.2",
+    "errorhandler": "^1.5.0",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "graphql": "^0.13.2",
+    "graphql-import": "^0.7.1",
+    "graphql-tools": "^4.0.0",
     "jsonwebtoken": "8.3.0",
-    "prisma-client-lib": "0.2.58"
+    "morgan": "^1.9.1",
+    "tslib": "^1.9.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^2.0.0",
     "@types/dotenv": "^4.0.3",
+    "@types/errorhandler": "^0.0.32",
+    "@types/express-session": "^1.15.11",
     "@types/graphql": "^14.0.1",
     "@types/jsonwebtoken": "^7.2.8",
+    "@types/morgan": "^1.7.35",
     "@types/prettier": "^1.13.2",
-    "@types/ws": "^6.0.1",
-    "prisma": "^1.17.1"
+    "@types/ws": "^6.0.1"
   }
 }
