--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -3,3 +3,5 @@ APP_USERNAME=admin
 APP_PASSWORD=password
 
 SIGNUP_ENABLED=false
+
+GC_FUNCTIONS_BASE_URL=https://us-central1-{{ my project }}.cloudfunctions.net/statusScrape
