--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "start": "yarn workspace @status-scrape/server run start",
     "watch:ts": "bin/build-ts.sh",
     "watch:webpack": "yarn workspace @status-scrape/admin run watch:webpack",
-    "debug": "yarn workspace @status-scrape/server watch:debug",
-    "emulate-functions": "npx @google-cloud/functions-emulator start"
+    "debug": "yarn workspace @status-scrape/server watch:debug"
   },
   "devDependencies": {
     "@types/node": "^10.11.1",
