--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -26,6 +26,7 @@
     "errorhandler": "^1.5.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "got": "^9.2.2",
     "graphql": "^0.13.2",
     "graphql-import": "^0.7.1",
     "graphql-tools": "^4.0.0",
@@ -38,6 +39,7 @@
     "@types/dotenv": "^4.0.3",
     "@types/errorhandler": "^0.0.32",
     "@types/express-session": "^1.15.11",
+    "@types/got": "^8.3.4",
     "@types/graphql": "^14.0.1",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/morgan": "^1.7.35",
