--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -18,12 +18,16 @@
     "@types/express": "^4.16.0",
     "@types/got": "^8.3.4",
     "@types/jsonwebtoken": "^7.2.8",
-    "mkdirp": "^0.5.1"
+    "mkdirp": "^0.5.1",
+    "npm-run-all": "^4.1.3"
   },
   "dependencies": {
     "express": "^4.16.3",
     "got": "^9.2.2",
+    "graphql": "^14.0.2",
+    "graphql-tools": "^4.0.0",
     "jsonwebtoken": "^8.3.0",
+    "prisma-client-lib": "^1.17.1",
     "tslib": "^1.9.3"
   }
 }
