tests, sucessful scraping

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -53,6 +53,12 @@
       "problemMatcher": [
         "$tsc"
       ]
+    },
+    {
+      "type": "npm",
+      "script": "deploy:prisma",
+      "path": "packages/prisma/",
+      "problemMatcher": []
     }
   ]
 }
