--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -1,30 +1,33 @@
 {
   "name": "@status-scrape/functions",
   "version": "1.0.0",
-  "main": "dist/index.js",
+  "main": "dist/scrape.js",
   "author": "Peter Kazazes",
   "private": true,
   "scripts": {
     "build": "tsc -b",
-    "build:bundle": "npm-run-all clean build && mkdirp ./bundle && cp -a package.json dist/* bundle && sed -i '' 's/dist\\/index.js/index.js/g' bundle/package.json",
+    "build:bundle": "npm-run-all clean build && mkdirp ./bundle && cp -a .env package.json dist/* bundle && sed -i '' 's/dist\\/scrape.js/scrape.js/g' bundle/package.json",
     "clean": "rimraf dist bundle",
     "lint": "tslint -c tslint.json -p tsconfig.json",
     "watch:ts": "tsc -w",
     "deploy": "yarn run build:bundle && source .env && gcloud functions deploy statusScrape --source bundle --runtime nodejs8 --trigger-http --timeout=120 --project $GC_PROJECT",
-    "deploy:emulator": "source .env && functions-emulator deploy statusScrape -H --timeout=120 --project $GC_PROJECT",
-    "emulate": "functions-emulator start"
+    "deploy:emulator": "yarn run build:bundle && source .env && functions-emulator deploy statusScrape -H --source bundle --timeout=120 --project $GC_PROJECT",
+    "emulate": "functions-emulator start",
+    "test": "jest --runInBand"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
     "@types/got": "^8.3.4",
     "@types/jsonwebtoken": "^7.2.8",
-    "mkdirp": "^0.5.1",
+    "body-parser": "^1.18.3",
+    "jsonwebtoken": "^8.3.0",
     "npm-run-all": "^4.1.3"
   },
   "dependencies": {
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "got": "^9.2.2",
-    "graphql": "^14.0.2",
+    "graphql": "^0.13.2",
     "graphql-tools": "^4.0.0",
     "jsonwebtoken": "^8.3.0",
     "prisma-client-lib": "^1.17.1",
