--- a/packages/functions/tsconfig.json
+++ b/packages/functions/tsconfig.json
@@ -8,5 +8,5 @@
       "*": ["node_modules/*", "types/*"]
     }
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "tests", "bundle"]
 }
