--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,19 @@
     {
       "type": "node",
       "request": "launch",
+      "name": "Jest Tests",
+      "program": "${workspaceRoot}/node_modules/jest/bin/jest.js",
+      "args": ["--runInBand"],
+      "runtimeArgs": ["--nolazy"],
+      "console": "integratedTerminal",
+      "env": {
+        "NODE_ENV": "test"
+      },
+      "cwd": "${workspaceFolder}/packages/functions"
+    },
+    {
+      "type": "node",
+      "request": "launch",
       "name": "Launch via NPM",
       "runtimeExecutable": "yarn",
       "runtimeArgs": ["run", "debug"],
