--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -11,8 +11,6 @@
     "lint": "tslint -c tslint.json -p tsconfig.json",
     "watch:ts": "tsc -w",
     "deploy": "yarn run build:bundle && source .env && gcloud functions deploy statusScrape --source bundle --runtime nodejs8 --trigger-http --timeout=120 --project $GC_PROJECT",
-    "deploy:emulator": "yarn run build:bundle && source .env && functions-emulator deploy statusScrape -H --source bundle --timeout=120 --project $GC_PROJECT",
-    "emulate": "functions-emulator start",
     "test": "jest --runInBand"
   },
   "devDependencies": {
@@ -20,10 +18,13 @@
     "@types/got": "^8.3.4",
     "@types/jsonwebtoken": "^7.2.8",
     "body-parser": "^1.18.3",
+    "jest": "^23.6.0",
     "jsonwebtoken": "^8.3.0",
     "npm-run-all": "^4.1.3"
   },
   "dependencies": {
+    "@types/cheerio": "^0.22.9",
+    "cheerio": "^1.0.0-rc.2",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "got": "^9.2.2",
