--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,9 +21,13 @@
     "apollo-server-express": "^2.1.0",
     "bcrypt": "^3.0.1",
     "body-parser": "^1.18.3",
+    "connect-memjs": "^0.2.1",
+    "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^6.0.0",
     "errorhandler": "^1.5.0",
     "express": "^4.16.3",
+    "express-healthcheck": "^0.1.0",
     "express-session": "^1.15.6",
     "got": "^9.2.2",
     "graphql": "^0.13.2",
@@ -31,9 +35,12 @@
     "graphql-tools": "^4.0.0",
     "jsonwebtoken": "8.3.0",
     "morgan": "^1.9.1",
+    "public-ip": "^2.4.0",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.1",
+    "@types/cookie-session": "^2.0.36",
     "@types/bcrypt": "^2.0.0",
     "@types/dotenv": "^4.0.3",
     "@types/errorhandler": "^0.0.32",
