--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,9 @@
 runtime: nodejs
 env: flex
 
-handlers:
-  - url: /graphql(\/.*)*
-    script: auto
-  - url: /.*
-    static_dir: packages/admin-frontend/dist
+manual_scaling:
+  instances: 1
+resources:
+  cpu: 1
+  memory_gb: 0.5
+  disk_size_gb: 10
