--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "lerna run build",
     "clean": "lerna run --parallel clean",
     "clean:modules": "rimraf packages/*/node_modules node_modules",
+    "deploy:gae": "npm-run-all clean lint build && gcloud beta app deploy",
     "lint": "lerna run --parallel lint",
     "test": "lerna run --parallel test",
     "serve": "yarn workspace @status-scrape/admin run serve",
