--- a/packages/admin-frontend/package.json
+++ b/packages/admin-frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "clean": "rimraf dist",
     "serve": "vue-cli-service serve",
-    "build:pack": "vue-cli-service build",
+    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test": "vue-cli-service test:unit",
     "watch:webpack": "vue-cli-service build --watch"
