--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -10,6 +10,7 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "graphql": "^0.13.0",
     "graphql-tag": "^2.9.2",
     "winston": "^3.1.0"
   }
