--- a/packages/tsconfig.base.json
+++ b/packages/tsconfig.base.json
@@ -14,8 +14,7 @@
     "noUnusedLocals": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    // "sourceMap": true,
-    "inlineSourceMap": true,
+    "sourceMap": true,
     "lib": ["es2017", "esnext", "dom"],
     "skipLibCheck": true
   },
