--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "clean": "lerna run --parallel clean",
     "clean:modules": "rimraf packages/*/node_modules node_modules",
     "deploy:gae": "npm-run-all clean lint build && gcloud beta app deploy",
+    "deploy:functions": "yarn workspace @status-scrape/functions run deploy",
     "lint": "lerna run --parallel lint",
     "test": "lerna run --parallel test",
     "serve": "yarn workspace @status-scrape/admin run serve",
