--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -11,7 +11,8 @@
     "lint": "tslint -c tslint.json -p tsconfig.json",
     "watch:ts": "tsc -w",
     "deploy": "yarn run build:bundle && source .env && gcloud functions deploy statusScrape --source bundle --runtime nodejs8 --trigger-http --timeout=120 --project $GC_PROJECT",
-    "test": "jest --runInBand"
+    "test": "jest --runInBand",
+    "debug:mock": "nodemon --inspect dist/mock.js"
   },
   "dependencies": {
     "@types/cheerio": "^0.22.9",
@@ -20,13 +21,16 @@
     "express": "^4.16.3",
     "graphql": "^0.13.2",
     "graphql-tools": "^4.0.0",
+    "insight": "^0.10.1",
     "jsonwebtoken": "^8.3.0",
     "mkdirp": "^0.5.1",
     "prisma-client-lib": "^1.17.1",
     "puppeteer": "^1.8.0",
+    "scrape-it": "^5.0.5",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.9",
     "@types/express": "^4.16.0",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/mkdirp": "^0.5.2",
@@ -34,6 +38,7 @@
     "body-parser": "^1.18.3",
     "jest": "^23.6.0",
     "jsonwebtoken": "^8.3.0",
-    "npm-run-all": "^4.1.3"
+    "npm-run-all": "^4.1.3",
+    "supertest": "^3.3.0"
   }
 }
