--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,7 +7,6 @@
   "scripts": {
     "build": "tsc -b",
     "clean": "rimraf dist",
-    "deploy": "prisma deploy",
     "lint": "tslint -c ../tslint.json -p tsconfig.json",
     "start": "node dist/index.js",
     "watch:ts": "tsc -w",
@@ -33,15 +32,16 @@
     "graphql": "^0.13.2",
     "graphql-import": "^0.7.1",
     "graphql-tools": "^4.0.0",
+    "insight": "^0.10.1",
     "jsonwebtoken": "8.3.0",
     "morgan": "^1.9.1",
     "public-ip": "^2.4.0",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^2.0.0",
     "@types/cookie-parser": "^1.4.1",
     "@types/cookie-session": "^2.0.36",
-    "@types/bcrypt": "^2.0.0",
     "@types/dotenv": "^4.0.3",
     "@types/errorhandler": "^0.0.32",
     "@types/express-session": "^1.15.11",
