--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -34,11 +34,13 @@
     "graphql-tools": "^4.0.0",
     "insight": "^0.10.1",
     "jsonwebtoken": "8.3.0",
+    "lodash": "^4.17.11",
     "morgan": "^1.9.1",
     "public-ip": "^2.4.0",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.116",
     "@types/bcrypt": "^2.0.0",
     "@types/cookie-parser": "^1.4.1",
     "@types/cookie-session": "^2.0.36",
