--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -40,7 +40,6 @@
     "tslib": "^1.9.3"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.116",
     "@types/bcrypt": "^2.0.0",
     "@types/cookie-parser": "^1.4.1",
     "@types/cookie-session": "^2.0.36",
@@ -50,8 +49,10 @@
     "@types/got": "^8.3.4",
     "@types/graphql": "^14.0.1",
     "@types/jsonwebtoken": "^7.2.8",
+    "@types/lodash": "^4.14.116",
     "@types/morgan": "^1.7.35",
     "@types/prettier": "^1.13.2",
-    "@types/ws": "^6.0.1"
+    "@types/ws": "^6.0.1",
+    "supertest": "^3.3.0"
   }
 }
