--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,4 @@
 {
-  "files": [],
   "references": [
     {
       "path": "./packages/prisma"
@@ -12,6 +11,17 @@
     },
     {
       "path": "./packages/functions"
+    },
+    {
+      "path": "./packages/frontend"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "experimentalDecorators": true,
+    "paths": {
+      "*": [
+        "packages/*/types"
+      ]
+    }
+  }
 }
