--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,11 +9,13 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@vue/cli-shared-utils": "^3.0",
     "apollo-cache-inmemory": "^1.2.10",
     "apollo-client": "^2.4.2",
     "apollo-link-persisted-queries": "^0.2.1",
     "apollo-upload-client": "^9.0.0",
     "bootstrap-css-only": "^4.1.1",
+    "graphql": "^0.13.2",
     "jquery": "^3.3.1",
     "mdbvue": "git+https://oauth2:5WEbk8n4Gysj7zCyyuFC@git.mdbootstrap.com/mdb/vue/vu-pro.git",
     "popper.js": "^1.14.3",
@@ -22,9 +24,11 @@
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
+    "vue2-google-maps": "^0.10.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-0",
     "@types/apollo-upload-client": "^8.1.0",
     "@types/jest": "^23.1.4",
     "@vue/cli-plugin-babel": "^3.0.4",
