--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -12,11 +12,15 @@
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
-      "webpack-env"
+      "webpack-env",
+      "vuetify"
     ],
     "paths": {
       "@/*": [
         "src/*",
+      ],
+      "*": [
+        "types"
       ]
     },
     "lib": [
