ignore npm lock files generated by vue-cli, tslint fixes

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -54,6 +54,15 @@
         "$ts-webpack-watch",
         "$tslint-webpack-watch"
       ]
+    },
+    {
+      "type": "npm",
+      "script": "build",
+      "path": "packages/frontend/",
+      "problemMatcher": [
+        "$ts-webpack",
+        "$tslint-webpack"
+      ]
     }
   ]
 }
