--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -27,6 +27,7 @@
     "errorhandler": "^1.5.0",
     "express": "^4.16.3",
     "express-healthcheck": "^0.1.0",
+    "express-https-redirect": "^1.0.0",
     "express-session": "^1.15.6",
     "got": "^9.2.2",
     "graphql": "^0.13.2",
