--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -49,6 +49,16 @@
       "script": "build",
       "path": "packages/frontend/",
       "problemMatcher": ["$ts-webpack", "$tslint-webpack"]
+    },
+    {
+      "type": "npm",
+      "script": "watch",
+      "problemMatcher": [
+        "$tsc-watch",
+        "$ts-webpack-watch",
+        "$tslint-webpack-watch"
+      ],
+      "isBackground": true
     }
   ]
 }
