notify on long running script finish

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,7 @@
   "compilerOptions": {
     "experimentalDecorators": true,
     "paths": {
-      "*": [
-        "packages/*/types"
-      ]
+      "*": ["packages/*/types"]
     }
   }
 }
