--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -26,13 +26,14 @@
     "dotenv": "^6.0.0",
     "errorhandler": "^1.5.0",
     "express": "^4.16.3",
+    "express-enforces-ssl": "^1.1.0",
     "express-healthcheck": "^0.1.0",
-    "express-https-redirect": "^1.0.0",
     "express-session": "^1.15.6",
     "got": "^9.2.2",
     "graphql": "^0.13.2",
     "graphql-import": "^0.7.1",
     "graphql-tools": "^4.0.0",
+    "helmet": "^3.13.0",
     "insight": "^0.10.1",
     "jsonwebtoken": "8.3.0",
     "lodash": "^4.17.11",
@@ -41,11 +42,13 @@
     "tslib": "^1.9.3"
   },
   "devDependencies": {
+    "@types/helmet": "^0.0.42",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.1",
     "@types/cookie-session": "^2.0.36",
     "@types/dotenv": "^4.0.3",
     "@types/errorhandler": "^0.0.32",
+    "@types/express-enforces-ssl": "^1.1.1",
     "@types/express-session": "^1.15.11",
     "@types/got": "^8.3.4",
     "@types/graphql": "^14.0.1",
