--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -34,6 +34,7 @@
     "graphql-import": "^0.7.1",
     "graphql-tools": "^4.0.0",
     "helmet": "^3.13.0",
+    "connect-history-api-fallback": "^1.5.0",
     "insight": "^0.10.1",
     "jsonwebtoken": "8.3.0",
     "lodash": "^4.17.11",
@@ -42,6 +43,7 @@
     "tslib": "^1.9.3"
   },
   "devDependencies": {
+    "@types/connect-history-api-fallback": "^1.3.1",
     "@types/helmet": "^0.0.42",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.1",
