--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "status-scrape",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "author": "Peter Kazazes",
   "private": true,
   "scripts": {
     "build": "lerna run build",
-    "clean": "lerna run --parallel clean",
+    "clean": "lerna run --parallel clean && yarn",
     "clean:modules": "rimraf packages/*/node_modules node_modules",
-    "deploy:gae": "npm-run-all clean lint build && gcloud beta app deploy",
-    "deploy:functions": "yarn workspace @status-scrape/functions run deploy",
+    "deploy:gae": "npm-run-all clean lint build && gcloud beta app deploy && notify -t 'Google App Engine' -m 'Version deployed.' -s Glass",
+    "deploy:functions": "yarn workspace @status-scrape/functions run deploy && notify -t 'Google Cloud Functions' -m 'Function deployed.' -s Glass",
     "lint": "lerna run --parallel lint",
     "test": "lerna run --parallel test",
     "start": "yarn workspace @status-scrape/server run start",
-    "watch": "bin/build.sh",
-    "watch:ts": "bin/build-ts.sh",
+    "watch": "bin/watch.sh",
+    "watch:ts": "bin/watch-ts.sh",
     "watch:webpack": "yarn workspace @status-scrape/frontend run watch",
     "debug": "yarn workspace @status-scrape/server watch:debug"
   },
@@ -21,24 +21,28 @@
     "@types/node": "^10.11.1",
     "@types/supertest": "^2.0.6",
     "chai": "^4.2.0",
+    "eslint": "^5.6.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "jest-express": "^1.8.0",
     "jest-junit": "^5.2.0",
     "lerna": "^3.4.0",
     "mkdirp": "^0.5.1",
     "node-notifier-cli": "^1.1.2",
     "npm-run-all": "^4.1.3",
+    "pre-commit": "^1.2.2",
     "rimraf": "^2.6.2",
     "supertest": "^3.3.0",
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
-    "typescript": "^3.0.3",
-    "eslint": "^5.6.1",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0"
+    "typescript": "^3.0.3"
   },
   "workspaces": [
     "packages/*"
+  ],
+  "pre-commit": [
+    "lint"
   ],
   "engines": {
     "yarn": "^1.9",
