--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@status-scrape/frontend",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -9,6 +9,7 @@
     "watch": "vue-cli-service build --watch --mode development"
   },
   "dependencies": {
+    "@status-scrape/common": "^0.0.1",
     "@babel/polyfill": "^7.0.0-rc.1",
     "apollo-cache": "^1.1.17",
     "apollo-cache-inmemory": "^1.2.10",
@@ -20,6 +21,7 @@
     "apollo-link-state": "^0.4.2",
     "apollo-upload-client": "^9.0.0",
     "graphql": "^0.13.2",
+    "graphql-tag": "^2.10.0",
     "vue": "^2.5.17",
     "vue-apollo": "^3.0.0-beta.11",
     "vue-class-component": "^6.0.0",
@@ -36,7 +38,6 @@
     "@vue/cli-service": "^3.0.4",
     "@vue/cli-shared-utils": "^3.0.4",
     "babel-plugin-transform-imports": "^1.5.0",
-    "graphql-tag": "^2.9.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "stylus": "^0.54.5",
@@ -47,5 +48,10 @@
     "vue-cli-plugin-vuetify": "^0.2.0",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4"
+  },
+  "workspaces": {
+    "nohoist": [
+      "@status-scrape/*"
+    ]
   }
 }
