--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@status-scrape/server",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "main": "dist/index.js",
   "author": "Peter Kazazes",
   "private": true,
@@ -14,8 +14,8 @@
     "watch:debug": "nodemon --inspect dist/index.js"
   },
   "dependencies": {
-    "@status-scrape/common": "^1.0.0",
-    "@status-scrape/prisma": "^1.0.0",
+    "@status-scrape/common": "^0.0.1",
+    "@status-scrape/prisma": "^0.0.1",
     "apollo-server-core": "^2.1.0",
     "apollo-server-express": "^2.1.0",
     "bcrypt": "^3.0.1",
@@ -26,13 +26,15 @@
     "dotenv": "^6.0.0",
     "errorhandler": "^1.5.0",
     "express": "^4.16.3",
+    "express-enforces-ssl": "^1.1.0",
     "express-healthcheck": "^0.1.0",
-    "express-https-redirect": "^1.0.0",
     "express-session": "^1.15.6",
     "got": "^9.2.2",
     "graphql": "^0.13.2",
     "graphql-import": "^0.7.1",
     "graphql-tools": "^4.0.0",
+    "helmet": "^3.13.0",
+    "connect-history-api-fallback": "^1.5.0",
     "insight": "^0.10.1",
     "jsonwebtoken": "8.3.0",
     "lodash": "^4.17.11",
@@ -41,11 +43,14 @@
     "tslib": "^1.9.3"
   },
   "devDependencies": {
+    "@types/connect-history-api-fallback": "^1.3.1",
+    "@types/helmet": "^0.0.42",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.1",
     "@types/cookie-session": "^2.0.36",
     "@types/dotenv": "^4.0.3",
     "@types/errorhandler": "^0.0.32",
+    "@types/express-enforces-ssl": "^1.1.1",
     "@types/express-session": "^1.15.11",
     "@types/got": "^8.3.4",
     "@types/graphql": "^14.0.1",
