--- a/packages/functions/tsconfig.json
+++ b/packages/functions/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "rootDir": "src",
+    "lib": ["es2015", "esnext"],
     "outDir": "dist",
     "paths": {
       "*": ["node_modules/*", "types/*"]
