--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
+    "lib": ["es2015", "esnext"],
     "baseUrl": ".",
     "rootDir": "src",
     "outDir": "dist",
