scrape job results

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -58,7 +58,11 @@
         "$ts-webpack-watch",
         "$tslint-webpack-watch"
       ],
-      "isBackground": true
+      "isBackground": true,
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      }
     }
   ]
 }
