loading indicators, new system status types, ui cleanup

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "lerna run build",
     "clean": "lerna run --parallel clean && yarn",
     "clean:modules": "rimraf packages/*/node_modules node_modules",
-    "deploy:gae": "npm-run-all clean lint build && gcloud beta app deploy && notify -t 'Google App Engine' -m 'Version deployed.' -s Glass",
+    "deploy:gae": "npm-run-all clean lint build && yarn && gcloud beta app deploy && notify -t 'Google App Engine' -m 'Version deployed.' -s Glass",
     "deploy:functions": "yarn workspace @status-scrape/functions run deploy && notify -t 'Google Cloud Functions' -m 'Function deployed.' -s Glass",
     "lint": "lerna run --parallel lint",
     "test": "lerna run --parallel test",
