--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -5,8 +5,15 @@
     "rootDir": "src",
     "outDir": "dist",
     "paths": {
-      "*": ["node_modules/*", "types/*"]
+      "*": [
+        "node_modules/*",
+        "types/*"
+      ]
     }
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "tests"
+  ]
 }
