--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,3 +39,9 @@ jobs:
           path: './packages/server/coverage'
       - store_artifacts:
           path: './packages/common/coverage'
+workflows:
+  version: 2
+  workflow:
+    jobs:
+    - build
+    - test
