Feature/circleci store tests (#53)
* circle test

* hotfix combine build test

* test context

* rename job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build:
+  build-test:
     docker:
       - image: circleci/node:carbon-stretch-browsers
     working_directory: ~/repo
@@ -17,3 +17,22 @@ jobs:
             - ~/.cache/yarn
           key: status-scrape-dependencies-{{ checksum "yarn.lock" }}
       - run: yarn run build
+      - run: yarn run test
+      - store_test_results:
+          path: './packages/functions/'
+      - store_test_results:
+          path: './packages/common/'
+      - store_test_results:
+          path: './packages/server/'
+      - store_artifacts:
+          path: './packages/functions/coverage'
+      - store_artifacts:
+          path: './packages/server/coverage'
+      - store_artifacts:
+          path: './packages/common/coverage'
+workflows:
+  version: 2
+  workflow:
+    jobs:
+    - build-test:
+        context: test
